Create script generator and voiceover generator

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,16 @@
 streamlit
 python-dotenv
 groq
-dotenv
+openai
+elevenlabs
+moviepy
+requests
+fal-client
+numpy
+decorator
+imageio
+imageio-ffmpeg
+proglog
+flask
+quart
+hypercorn
