--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,18 @@ python-dotenv
 groq
 dotenv
 python-telegram-bot>=20.0
+anthropic
+elevenlabs
+openai
+elevenlabs
+moviepy
+requests
+fal-client
+numpy
+decorator
+imageio
+imageio-ffmpeg
+proglog
+flask
+quart
+hypercorn
